@@ -310,6 +310,7 @@ enum AVCodecID {
     AV_CODEC_ID_GEM,
     AV_CODEC_ID_VBN,
     AV_CODEC_ID_JPEGXL,
+    AV_CODEC_ID_QOI,
 
     /* various PCM "codecs" */
     AV_CODEC_ID_FIRST_AUDIO = 0x10000,     ///< A dummy id pointing at the start of audio codecs
